--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
             pegaServerUrl="https://areteans-i25-plf.pegatsdemo.com/prweb/"
             autoReauth="true"
             authService="pega"
-			deferLoad='true' userIdentifier='savitha' password='cnVsZXM='
-            clientId="75564243042876277339"
+			userIdentifier='Daniel Tan' password='cnVsZXM=' clientId="75564243042876277339"
             style="width:100%">
         </pega-embed>
 		</div>
